--- a/custom.css
+++ b/custom.css
@@ -21,10 +21,26 @@
 
 .custom-navbar-text {
 	color: white;
-	text-align: center;
-	vertical-align: middle;
+	text-align: left;
+	font-weight: 600;
 }
 
 .navbar-custom {
-	margin-bottom: 2em;
+}
+
+.navbar-home-custom {
+	color: white;
+	text-align: left;
+	margin-left: 2em;
+	font-weight: 600;
+	font-size: 200%;
+}
+
+.background-gradient-custom {
+	background: linear-gradient(#D9D9D9, #F5F5F5);
+	height: 100%;
+}
+
+.fill-custom {
+	padding-bottom: 2em;
 }
