--- a/custom.css
+++ b/custom.css
@@ -15,6 +15,29 @@
 	 background-size:24px;
 }
 
+.button-only-image {
+	background-color: transparent;
+	border: 0 none;
+	outline:none;
+}
+
+.button-only-image:focus {
+	outline:none;
+}
+
+.add-button {
+	width: 48px;
+    height: 48px;
+	background-size:48px;
+}
+
+.map-images {
+	width: 30px;
+    height: 30px;
+	background-size:30px;
+	vertical-align:middle;
+}
+
 .custom-navbar-text {
 	color: white;
 	text-align: left;
@@ -22,7 +45,12 @@
 	padding-left: 5px;
 }
 
-.navbar-custom {
+.table-votes {
+	border: 1px solid black;
+	background: white;
+	padding: 0px;
+	vertical-align:middle; 
+	text-align:center;
 }
 
 .navbar-home-custom {
