--- a/custom.css
+++ b/custom.css
@@ -1,20 +1,3 @@
-.button-image:before {
-    content: "";
-    width: 24px;
-    height: 24px;
-    display: inline-block;
-    margin-right: 5px;
-    vertical-align: text-top;
-    background-color: transparent;
-    background-position : center center;
-    background-repeat:no-repeat;
-}
-
-.image:before{
-     background-image:url('if_sign-add_299068.png');
-	 background-size:24px;
-}
-
 .button-only-image {
 	background-color: transparent;
 	border: 0 none;
@@ -31,10 +14,17 @@
 	background-size:48px;
 }
 
-.map-images {
+.map-image-vote {
 	width: 30px;
     height: 30px;
 	background-size:30px;
+	vertical-align:middle;
+}
+
+.map-image-user {
+	width: 45px;
+    height: 45px;
+	background-size:45px;
 	vertical-align:middle;
 }
 
@@ -53,6 +43,13 @@
 	text-align:center;
 }
 
+.td-votes {
+	border-right: 1px solid black;
+	padding: 0px;
+	vertical-align:middle; 
+	text-align:center;
+}
+
 .navbar-home-custom {
 	color: white;
 	text-align: left;
@@ -61,9 +58,8 @@
 	font-size: 200%;
 }
 
-.background-gradient-custom {
+.body {
 	background: linear-gradient(#D9D9D9, #F5F5F5);
-	height: 100%;
 }
 
 .fill-custom {
